Fix images' alignment.

--- a/style.scss
+++ b/style.scss
@@ -122,7 +122,7 @@ a {
       border-top-right-radius: 0;
       margin-right: auto;
       width: 80%;
-      transform: translateX(10%);
+      transform: translateX(12.5%);
     }
     .card-body {
       padding: 30px;
@@ -205,7 +205,7 @@ a {
     margin-left: auto;
     padding: 30px 0;
     width: 125%;
-    transform: translateX(-12.5%);
+    transform: translateX(-10%);
   }
   .subsection {
     margin-bottom: 20px;
@@ -262,7 +262,7 @@ a {
   border-top-right-radius: 0;
   margin-right: auto;
   width: 80%;
-  transform: translateX(10%);
+  transform: translateX(12.5%);
 }
 
 .breaker {
